OO-1211 adding missing export icon, fix narrow spacing in toolbar dropdowns

--- a/src/main/webapp/static/themes/light/modules/_icons.scss
+++ b/src/main/webapp/static/themes/light/modules/_icons.scss
@@ -90,6 +90,7 @@ $fa-css-prefix: "o_icon" !default;
 .o_icon_eportfolio_link:before { content: $fa-var-puzzle-piece; }
 .o_icon_error:before { content: $fa-var-exclamation-circle; color: $brand-danger;}
 .o_icon_expenditure:before { content: $fa-var-clock-o;}
+.o_icon_export:before { content: $fa-var-share-square-o;}
 .o_icon_external_link:before { content: $fa-var-external-link } 
 .o_icon_failed:before { content: $fa-var-times-circle;}
 .o_icon_filter:before { content: $fa-var-filter;}
